# mcr

./: .clippy.toml  .devlog_draft_2025-11-07.md  .gitignore  .markdown-link-check-ignore  .markdown-link-check.json  .markdownlint.json  .markdownlintignore  ARCHITECTURE.md  ARCHITECTURE.md.fucked  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVLOG.md  IMPLEMENTATION_PLAN.md  JUSTFILE_QUICK_REFERENCE.md  LICENSE-APACHE  LICENSE-MIT  LOGGING_MIGRATION_PLAN.md  PHASE4_PLAN.md  QUICK_TEST.md  README.md  REFACTORING_PLAN.md  REFACTORING_ROADMAP.md  SECURITY.md  STATUS.md  TECHNICAL_DEBT.md  TESTING.md  TESTING_PLAN.md  about.toml  build.rs  check.sh  codecov.yml  demo_logging.md  justfile  licenses.html  package-lock.json  package.json  rust-toolchain.toml  tarpaulin-report.html  tarpaulin.toml  (+2 more)
.cargo/: config.toml
.config/: nextest.toml
.gemini_tmp/: commit_message.txt  original_test_file.rs
.github/: dependabot.yml
.github/workflows/: nightly.yml  performance.yml  rust.yml
design/: INTERACTIVE_CLI_DESIGN.md  KERNEL_RINGBUFFER_ANALYSIS.md  LOGGING_DESIGN.md  RINGBUFFER_IMPLEMENTATION.md
design/gem/: 02a_gem_sketch_decentralized.md  03_gem_architecture.md  04_gem_detailed_design.md  05_step1_happy_path.md  06_step2_failure_modes.md  07_step3_bad_actor.md  08_gem_architecture_v2.md  08_gem_architecture_v3.md  09_red_team_review.md
design/overlay/: 01a_overlay_sketch_v2.md  02_control_plane_signaling.md  11_red_team_review_v2.md
developer_docs/: ARCHITECTURE.md  ARCHITECTURE_EVALUATION.md  BUILD_CONSISTENCY.md  CONTRIBUTING.md  DESIGN.md  DEVELOPER_GUIDE.md  IMPROVEMENT_PLAN.md  JUSTFILE_QUICK_REFERENCE.md  JUSTFILE_WORKFLOW.md  MCR_VS_SOCAT_MEASURED_COMPARISON.md  MCR_VS_SOCAT_SCALABILITY_COMPARISON.md  MULTI_INTERFACE_ARCHITECTURE.md  NAMESPACE_DEPLOYMENT.md  PERFORMANCE_VALIDATION_REPORT.md  PIM_SM_IMPLEMENTATION_PLAN.md  README.md  RSS_CONFIGURATION.md  TESTING.md
developer_docs/archive/: JUSTFILE_WORKFLOW.md  STATUS.md
developer_docs/comparisons/: MCR_vs_socat.md  README.md
developer_docs/decisions/: 001_buffer_management_strategy.md
developer_docs/design/: README.md
developer_docs/future_work/: HEAD_END_REPLICATION.md  INTERACTIVE_CLI_DESIGN.md
developer_docs/plans/: CAPABILITIES_AND_PACKAGING.md  CONTROL_PLANE_INTEGRATION.md  EGRESS_EVENT_DRIVEN_FIX.md  FANOUT_IMPLEMENTATION_REVIEW.md  MSDP_IMPLEMENTATION.md  MULTI_INTERFACE_DESIGN.md  OPTION4_UNIFIED_LOOP.md  REFACTORING_PLAN.md  UNIFIED_LOOP_SESSION_SUMMARY_2025-11-17.md
developer_docs/policies/: README.md  UNSAFE_CODE_POLICY.md
developer_docs/reference_docs/: MULTI_STREAM_SCALING_REPORT.md  README.md
developer_docs/reports/: DEVNULL_EGRESS_SINK_PROPOSAL.md  EGRESS_REGRESSION_ANALYSIS_2025-11-16.md  MULTI_STREAM_SCALING_REPORT.md  PERFORMANCE_FIX_2025-11-16.md  PERFORMANCE_REGRESSION_2025-11-16.md  PERFORMANCE_REGRESSION_FIX_SUMMARY_Nov2025.md  PROTOCOL_IMPLEMENTATION_GAP_ANALYSIS.md  PROTOCOL_TOPOLOGY_TEST_DESIGN.md  README.md  SESSION_SUMMARY_TEST_FRAMEWORK_IMPLEMENTATION.md  TEST_FRAMEWORK_VALIDATION_RESULTS.md
developer_docs/testing/: DEVELOPER_TESTING_STRATEGY.md  PRACTICAL_TESTING_GUIDE.md  README.md  improvement_plan.md  netns_test_framework.md  test_coverage_analysis.md  test_framework_proposal.md
docs/: ARCHITECTURE_DIAGRAMS.md  LOGGING.md  PACKET_MMAP_IMPLEMENTATION_PLAN.md
docs/completed/: PHASE4_COMPLETION.md  SESSION_RECAP_2025-11-11.md
docs/experiments/: High_Density_Stream_Test.md  Multi_Stream_Scaling_Test.md  SESSION_NOTES_2025-11-15.md  check_routes.sh  debug_bridge_packets.sh  multicast_routing_analysis.md  test_dual_bridge_with_route.sh  test_no_relay_route.sh  test_no_src_route.sh  test_same_address.sh  test_socat_minimal_requirements.sh  test_socat_requirements.sh
docs/plans/: LOGGING_INTEGRATION_PLAN.md
docs/reference/: TESTING.md
examples/: config.json5  logging_demo.rs  mcrd-namespace.service
experiments/: README.md  closure_passing_test.rs  poc_closure_ownership.rs
experiments/poc_buffer_pool_performance/: .gitignore  Cargo.toml  MODELING.md  README.md  run_benchmarks.sh
experiments/poc_buffer_pool_performance/benches/: buffer_pool_bench.rs
experiments/poc_buffer_pool_performance/src/: exhaustion_test.rs  lib.rs
experiments/poc_fd_passing/: Cargo.toml  README.md
experiments/poc_fd_passing_privdrop/: Cargo.toml  README.md  run_test.sh
experiments/poc_helper_socket_igmp/: Cargo.toml  README.md  run_test.sh
experiments/poc_io_uring_af_packet/: Cargo.toml  README.md  run_test.sh
experiments/poc_io_uring_egress/: Cargo.toml  README.md  run_tests.sh
experiments/poc_io_uring_egress/benches/: egress_throughput.rs
experiments/poc_io_uring_egress/src/: lib.rs
experiments/poc_ringbuffer/: Cargo.toml  README.md
experiments/poc_supervisor_failure_handling/: Cargo.toml
experiments/poc_supervisor_lifecycle/: Cargo.toml
mcr-test-macros/: Cargo.toml
mcr-test-macros/src/: lib.rs
nix-0.30.1/: CHANGELOG.md  README.md
scripts/: build_all.sh  build_strategy_doc.sh  check_unsafe.sh  pre-commit  run-tests-in-netns.sh  setup_kernel_tuning.sh  validate_mermaid.js
src/: config.rs  control_client.rs  control_plane.rs  ipc.rs  lib.rs  main.rs  mroute.rs  supervisor.rs  traffic_generator.rs  validation.rs  worker.rs
strategy/: ADVERSARIAL_QUESTIONS.md  ADVERSARIAL_QUESTIONS_V2.md  COMPETITIVE_LANDSCAPE.md  EXECUTIVE_SUMMARY.md  PROBLEM_SPACE_ANALYSIS.md  STRATEGY.html  STRATEGY_DRAFT.md  STRATEGY_V2.md  STRATEGY_V3.md  USER_PERSONAS.md
tests/: README.md  TEST_STANDARDS.md  capabilities_test.sh  control_plane.rs  data_plane_debug.sh  data_plane_e2e.sh  data_plane_performance.sh  data_plane_pipeline.sh  data_plane_pipeline_veth.sh  debug_10_packets.sh  integration.rs  lib.rs  main_integration.rs  scaling_test.sh  supervisor_integration.rs  supervisor_logic.rs  test_all_scripts.sh  test_egress_shutdown.sh  test_high_load.sh  worker_logic.rs
user_docs/: CONFIGURATION.md  GUIDE.md  OPERATIONAL_GUIDE.md  PROTOCOL_CAPABILITIES.md  QUICK_TEST.md  REFERENCE.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md  WHY_USE_MCR.md
(+215 files in other folders)
