[package]
name = "multicast_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.11", features = ["derive"] }
io-uring = "0.6.4"
libc = "0.2.155"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.14.0"
log = "0.4"
nix = { version = "0.30.1", features = ["sched", "process", "socket", "user", "fs", "signal"] }
num_cpus = "1.16.0"
pnet = "0.34.0"

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.124"
socket2 = { version = "0.5.7", features = ["all"] }
sysinfo = "0.30.12"
thiserror = "1.0.63"
tokio = { version = "1.48.0", features = ["full"] }
tokio-uring = "0.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
caps = "0.5.6"
futures = "0.3.31"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0"
proptest-derive = "0.4"
tempfile = "3.10.1"

[features]
integration_test = []
testing = []

[[bin]]
name = "poc_closure_ownership"
path = "experiments/poc_closure_ownership.rs"

[[bin]]
name = "closure_passing_test"
path = "experiments/closure_passing_test.rs"
required-features = ["integration_test"]

[[bin]]
name = "multicast_relay"
path = "src/main.rs"

[[bin]]
name = "traffic_generator"
path = "src/traffic_generator.rs"

[[bin]]
name = "control_client"
path = "src/control_client.rs"
