[package]
name = "multicast_relay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.52", features = ["derive"] }
io-uring = "0.6.4"
libc = "0.2.155"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.14.0"
log = "0.4"
nix = { version = "0.30.1", features = ["sched", "process", "socket", "user", "fs", "signal", "event", "uio", "mman"] }
num_cpus = "1.16.0"
pnet = "0.34.0"

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.124"
socket2 = { version = "0.6.1", features = ["all"] }
sysinfo = "0.37.2"
thiserror = "1.0.63"
tokio = { version = "1.48.0", features = ["full"] }
tokio-uring = "0.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
caps = "0.5.6"
futures = "0.3.31"
tokio-util = { version = "0.7.17", features = ["codec"] }
crossbeam-queue = "0.3"

[dev-dependencies]
proptest = "1.9.0"
rusty-fork = "0.3.1"
tempfile = "3.23.0"
wait-timeout = "0.2.1"
regex = "1.10"
rtnetlink = "0.14"
futures-util = "0.3"
mcr-test-macros = { path = "mcr-test-macros" }
[features]
integration_test = []
testing = []

[[bin]]
name = "poc_closure_ownership"
path = "experiments/poc_closure_ownership.rs"

[[bin]]
name = "closure_passing_test"
path = "experiments/closure_passing_test.rs"
required-features = ["integration_test"]

[[bin]]
name = "multicast_relay"
path = "src/main.rs"

[[bin]]
name = "traffic_generator"
path = "src/traffic_generator.rs"

[[bin]]
name = "control_client"
path = "src/control_client.rs"

[[test]]
name = "proptests"
path = "tests/proptests/packet_parser.rs"
