[package]
name = "multicast_relay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
clap = { version = "4.5.58", features = ["derive"] }
io-uring = "0.7.11"
libc = "0.2"
nix = { version = "0.31", features = ["sched", "process", "socket", "user", "fs", "signal", "event", "uio", "mman", "net"] }

serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
json5 = "1.3.1"
socket2 = { version = "0.6.1", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
caps = "0.5.6"
futures-core = "0.3"
futures-sink = "0.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1"

[dev-dependencies]
proptest = "1.10.0"
rusty-fork = "0.3.1"
tempfile = "3.25.0"
uuid = { version = "1.21.0", features = ["v4"] }
wait-timeout = "0.2.1"
regex = "1.12"
mcr-test-macros = { path = "mcr-test-macros" }
[features]
integration_test = []
testing = []

[[bin]]
name = "poc_closure_ownership"
path = "experiments/poc_closure_ownership.rs"

[[bin]]
name = "closure_passing_test"
path = "experiments/closure_passing_test.rs"
required-features = ["integration_test"]

[[bin]]
name = "mcrd"
path = "src/main.rs"

[[bin]]
name = "mcrgen"
path = "src/traffic_generator.rs"

[[bin]]
name = "mcrctl"
path = "src/control_client.rs"

[[test]]
name = "proptests"
path = "tests/proptests/packet_parser.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
