[package]
name = "poc_io_uring_egress"
version = "0.1.0"
edition = "2024"

[dependencies]
io-uring = "0.7.11"
socket2 = "0.6.1"
libc = "0.2"
anyhow = "1.0.100"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "egress_throughput"
harness = false

[profile.release]
debug = true  # Enable debug symbols for perf analysis
